Refactorizando para que un usuario pueda tener multimples roles